--- a/src/RsvpForm.css
+++ b/src/RsvpForm.css
@@ -8,8 +8,8 @@
 
 .form-label-container {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
     width: 80%;
     padding: 4px;
 }
@@ -18,12 +18,14 @@
     font-family: Asap-Condensed, serif;
     font-size: 22px;
     text-align: start;
+    letter-spacing: 1px;
+    color: #222222;
 }
 
 .input-box {
     width: 80%;
     height: 30px;
-    border-radius: 20px;
+    border-radius: 5px;
     margin-bottom: 50px;
     font-size: 18px;
     text-align: center;
@@ -35,21 +37,21 @@
     width: 80%;
     justify-content: space-around;
     padding: 10px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 .attendance-not-selected {
     width: 40%;
     border-style: solid;
-    border-width: 2px;
+    border-width: 5px;
     border-color: transparent;
     border-radius: 20px;
 }
 .attendance-selected {
     width: 40%;
     border-style: solid;
-    border-width: 2px;
-    border-color: green;
+    border-width: 5px;
+    border-color: #7FC6D7;
     border-radius: 20px;
 }
 
@@ -57,5 +59,36 @@
     width: 80%;
     font-size: 30px;
     font-family: Asap-Condensed, serif;
-    border-radius: 20px;
+    border-radius: 5px;
+    background-color: #AFD6EF;
+}
+
+.submit-disabled {
+    width: 80%;
+    font-size: 30px;
+    font-family: Asap-Condensed, serif;
+    border-radius: 5px;
+    opacity: 50%;
+}
+
+.confirmation-page {
+    align-items: center;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.confirmation-text {
+    font-family: Asap-Condensed, serif;
+}
+
+.submit-another {
+    margin-top: 30px;
+    font-family: Asap-Condensed, serif;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #AFD6EF;
+    border-radius: 5px;
+    padding: 5px 50px;
 }
